Expanded Cheat Menu:
version bump v9.4/v1.5

## v1.5 (28 Sep 2018)
- More strings.
- Added/Changed some funcs.
- Removed hint from list choice list box (still shows up for title bar and Ok button).

Terraformer v0.9:
Rock removal now takes about a second.
Added Ctrl-Shift-Alt-D to delete objects (careful: it doesn't ask and will delete any object).
Changed default delete rocks key to Ctrl-Shift-1, and moved small rocks to Ctrl-Shift-2.

ExpandedCheatMenu@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1,5 +1,4 @@
 ID,Text,Translation,Old Translation,Gender
-302535920001366,,
 302535920001367,,
 302535920001368,,
 302535920001369,,
@@ -36,6 +35,8 @@ ID,Text,Translation,Old Translation,Gender
 302535920000887,ECM,
 302535920000000,Expanded Cheat Menu,
 302535920000104,Expanded CM,
+302535920001366,Delete Small Rocks,
+302535920000864,Delete Large Rocks,
 302535920001356,New,
 302535920001355,Map,
 302535920001354,"This dome (%s) has buildings, which = crash if removed...",
@@ -913,7 +914,6 @@ See the examine list on the left for ids.",
 302535920000879,"Doesn't add the little flags, just lines and spheres (good for larger maps).",
 302535920000454,Fires some commands to reload lua files (use OnMsg.ReloadLua() to listen for it).,
 302535920000874,(see Path Markers to mark more than one at a time).,
-302535920000864,Delete All Rocks,
 302535920001208,Export Colonist Data To CSV,
 302535920001219,Exports data about colonists to %sColonists.csv,
 302535920001176,Toggle showing FX debug info in console.,
@@ -969,7 +969,7 @@ The map disaster settings don't do jack (use ECM>Mission>Disasters).",
 302535920000496,"Reloads particles from ""Data/Particles""...",
 302535920000497,Toggle Terrain Deposit Grid,
 302535920000498,Shows a grid around concrete.,
-302535920000499,Toggle Hex Build + Passability Grid Visibility,
+302535920000499,Toggle Grid Follow Mouse,
 302535920000500,Shows a hex grid with green for buildable/walkable.,
 302535920001317,Launch Fuel Per Rocket,
 302535920001318,Change how much fuel rockets need to launch.,
@@ -1249,7 +1249,7 @@ Takes less then a second on a map with 3616 buildings and 54 drone hubs.",
 302535920000641,Texture Compression,
 302535920000643,Higher Render Distance,
 302535920000645,Higher Shadow Distance,
-302535920001238,Removes most rocks for that smooth map feel (will take about 30 seconds).,
+302535920001238,Removes rocks for that smooth map feel.,
 302535920000803,For rules separate with spaces: Hunger ColonyPrefab (or leave blank for none).,
 302535920000110,Min,
 302535920000941,Max,
