Expanded Cheat Menu:
### Added:
- Game>Camera>Reset: If something makes the camera view wonky you can use this to fix it.

### Changed:
- Moved Presets menu to Debug as a submenu.
- Added settings to some more menu item hints.
- Added Ged Editor to the Tools menu in Examine.
- When you use a string to examine an object; you now need to pass ,"str" along with it: OpenExamine("ChoGGi.UserSetting","str")

### Fixed:
- Some menu item hints with settings in them weren't being updated.
- Made sure Mod Upload works correctly with screenshots.
- Some missing/borked text in menus.
- Measure Tool.

ExpandedCheatMenu@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1,9 +1,4 @@
 ID,Text,Translation,Old Translation,Gender
-302535920001367,,
-302535920001368,,
-302535920001369,,
-302535920001370,,
-302535920001371,,
 302535920001372,,
 302535920001373,,
 302535920001374,,
@@ -235,6 +230,7 @@ If this isn't a dumping site then waste rock will not be emptied.",
 302535920000692,Log is blank (well not anymore).,
 302535920000477,Clear out the windowed console log.,
 302535920000865,Toggle Trans,
+302535920001369,Ged Editor,
 302535920001359,debug.getinfo() level,
 302535920001358,debug.upvalue() level,
 302535920001353,Thread info,
@@ -295,6 +291,7 @@ Press Ctrl-Enter or Shift-Enter to execute code.",
 302535920000073,Execute code in text box (Ctrl-Enter or Shift-Enter will also work).,
 302535920000075,Insert Obj,
 302535920000076,At caret position inserts: ChoGGi.CurObj,
+302535920001371,"Double-click to apply and close list, double right-click to apply without closing list.",
 302535920001341,Double-click to apply without closing list.,
 302535920001167,Use Ctrl/Shift for multiple selection.,
 302535920001324,ECM: OpenInListChoice(list) is blank... This shouldn't happen.,
@@ -331,6 +328,7 @@ Press Enter to refresh list (update names).
 Double click selected item to open in new manipulator.",
 302535920000102,Use to change values of selected list item.,
 302535920000103,Edit Value,
+302535920001367,Toggles,
 302535920001344,Points To Train,
 302535920001345,How many points are needed to finish training.,
 302535920000037,Always Clean,
@@ -771,7 +769,7 @@ Warning: Disable births or else...",
 302535920000369,No More Earthsick,
 302535920000370,Colonists will never become Earthsick (and removes any when you enable this).,
 302535920000371,Traits: Restrict For Selected Building Type,
-302535920000372,Select a building and use this to only allow workers with certain traits to work there (block overrides).,
+302535920000372,Select a building and use this to only allow workers with certain traits to work there (block will override).,
 302535920000373,Traits: Block For Selected Building Type,
 302535920000374,Select a building and use this to block workers with certain traits from working there (overrides restrict).,
 302535920000376,"Turns selected/moused over colonist into food (between 1-5), or shows a list with choices.",
@@ -857,6 +855,7 @@ Works after colonist idle.",
 Not permanent.",
 302535920000447,Change the age at which colonists die (applies to newly arrived and born colonists as well).,
 302535920000448,"I'm afraid it could be 9/11 times 1,000.",
+302535920001368,Sound FX,
 302535920001110,Press F4,
 302535920000724,Show Grid Square,
 302535920000725,Square (use Disable to hide.,
@@ -949,7 +948,7 @@ click+drag for multiple selection.
 
 It's not as if domes need to be where you placed them (people will just ignore if you move the domes all to one place for that airy mars look).",
 302535920000481,Open In Ged Object Editor,
-302535920000482,It edits stuff?,
+302535920000482,"Shows some info about the object, and so on. Some buttons may make camera wonky (use Game>Camera>Reset).",
 302535920000483,Write Console Log,
 302535920000484,Write console log to %slogs/ConsoleLog.log (writes immediately).,
 302535920000487,Delete All Of Selected Object,
@@ -1233,6 +1232,7 @@ Takes less then a second on a map with 3616 buildings and 54 drone hubs.",
 302535920000620,If any colonists are black cubes click this.,
 302535920000621,Align All Buildings To Hex Grid,
 302535920000622,If you have any buildings that aren't aligned to the hex grids use this.,
+302535920001370,If something makes the camera view wonky you can use this to fix it.,
 302535920001111,Whiter Rocks,
 302535920001113,Helps the rocks blend in better when using the polar ground texture.,
 302535920000674,Terrain Editor Toggle,
@@ -1432,7 +1432,7 @@ For any issues; please report them to my Github/Steam/NexusMods page, or email %
 302535920000664,Toggle Signs,
 302535920000665,"Concrete, metal deposits, not working, etc...",
 302535920000666,Toggle on-screen hints,
-302535920000667,Don't show hints for this game,
+302535920000667,Don't show hints for this game.,
 302535920000668,Reset on-screen hints,
 302535920000669,Just in case you wanted to see them again.,
 302535920000670,Never Show Hints,
