Expanded Cheat Menu:
### Changed:
- You can change concrete deposit amount/max in Cheats selection.
- Overrode the Empty Deposit cheat so it looks like 0, but it won't get removed (if you mis-click).

### Fixed:
- Issue with shortcuts and multiple of my mods that use shortcuts.

ExpandedCheatMenu@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -187,7 +187,7 @@ Reselect to update display.",
 302535920001225,Add visual dust and maintenance points.,
 302535920001226,You may need to use AddDust before using this to change the building visually.,
 302535920001227,Turns object into ruin.,
-302535920001228,This will remove the %s object from the map.,
+302535920001228,Set the stored amount of this %s to 0.,
 302535920001230,"Empties the storage of this building.
 
 If this isn't a dumping site then waste rock will not be emptied.",
@@ -1588,7 +1588,7 @@ restart to set disabled.",
 302535920001347,Show Console,
 302535920001348,Restart,
 302535920001349,Place Last Constructed Building,
-302535920001350,Place Last Placed Object,
+302535920001350,Place Last Selected Object,
 302535920010000,math.%s not implemented yet.,
 302535920010001,bad argument #%s to 'math.%s' (%s),
 302535920010002,zero,
