Expanded Cheat Menu:
### Changed:
- Added lightning strikes option to Disasters (also added option to set amount of missiles/strikes).
- Added mapdata setting options to Disasters.
- Slight random delay added to missiles/strikes (you can do as many as you want without it getting crazy laggy).

ExpandedCheatMenu@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1,7 +1,5 @@
 ID,Text,Translation,Old Translation,Gender
-302535920001372,,
-302535920001373,,
-302535920001374,,
+302535920000250,Default mapdata type,
 302535920001375,,
 302535920001376,,
 302535920001377,,
@@ -493,6 +491,9 @@ Use with %s to fill up a dome with spires.",
 302535920000230,Remove Building Limits,
 302535920000231,"Buildings can be placed almost anywhere (I left uneven terrain blocked, and pipes don't like domes).
 See also %s.",
+302535920001372,Change the number on the end to fire that amount (ex: %s25).,
+302535920001373,Lightning Strike,
+302535920001374,LightningStrike,
 302535920001342,Change Outsource Limit,
 302535920001343,How many times you can outsource in a row.,
 302535920000292,Resets sponsor points to default for that sponsor,
@@ -557,7 +558,6 @@ Buildings are still unlocked.",
 302535920000241,Major,
 302535920000245,Multi-Spawn,
 302535920000246,Missle,
-302535920000250,Might be a little laggy,
 302535920000252,"Targeted to mouse cursor (use arrow keys to select and enter to start).",
 302535920000253,"Core: Repeatable, exploit core resources.",
 302535920000254,"Deep: Toggleable, exploit deep resources.",
