--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1,6 +1,4 @@
 ID,Text,Translation,Old Translation,Gender
-302535920000250,Default mapdata type,
-302535920001375,,
 302535920001376,,
 302535920001377,,
 302535920001378,,
@@ -491,6 +489,7 @@ Use with %s to fill up a dome with spires.",
 302535920000230,Remove Building Limits,
 302535920000231,"Buildings can be placed almost anywhere (I left uneven terrain blocked, and pipes don't like domes).
 See also %s.",
+302535920000250,Default mapdata type,
 302535920001372,Change the number on the end to fire that amount (ex: %s25).,
 302535920001373,Lightning Strike,
 302535920001374,LightningStrike,
@@ -1369,6 +1368,7 @@ Not noticeable unless using higher zoom.",
 302535920000654,Select (or mouse over) an object to follow.,
 302535920000655,Toggle Cursor,
 302535920000656,Toggle between moving camera and selecting objects.,
+302535920001375,<color 255 100 100>WARNING: Backup your first five workshop images.</color>,
 302535920001364,Don't be an asshole to %s... Always ask permission before using other people's hard work.,
 302535920001365,HPK files will be unpacked into AppData/Mods/ModSteamId,
 302535920001362,Extract HPKs,
