Expanded Cheat Menu:
### Changed:
- Mod Upload will now also check for AppData/Mod Images/ModId_screenshot*.png/jpg, and upload those if found.
- > Since the upload function will delete images on workshop without screenshots in moddef and without asking, I might as well...
- > I didn't want to have to upload a bunch of images to github as well, so that's why I added this option.

ExpandedCheatMenu@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1368,7 +1368,7 @@ Not noticeable unless using higher zoom.",
 302535920000654,Select (or mouse over) an object to follow.,
 302535920000655,Toggle Cursor,
 302535920000656,Toggle between moving camera and selecting objects.,
-302535920001375,<color 255 100 100>WARNING: Backup your first five workshop images.</color>,
+302535920001375,"<color 255 100 100>WARNING: Backup your first five workshop images (unless you use screenshot 1-5 in mod def, or in AppData/Mod Images/ModId_screenshot*.png/jpg).</color>",
 302535920001364,Don't be an asshole to %s... Always ask permission before using other people's hard work.,
 302535920001365,HPK files will be unpacked into AppData/Mods/ModSteamId,
 302535920001362,Extract HPKs,
