--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1172,7 +1172,7 @@ This resets all pipes to the default skin.",
 
 Seems to fix it after a Sol or two, so you shouldn't need to leave this running.",
 302535920001193,Remove Blue Grid Marks,
-302535920001197,"If you have any buildings with the selection grid around it, and you don't have it selected.",
+302535920001197,"If you have any buildings with the selection grid around it, and you don't have it selected (also fixes stuck RC Transport Ghosts).",
 302535920000882,"If you have borked commanders, this will probably fix them (may take a few seconds to apply).
 
 You may need to toggle the recall drones button (for certain issues).",
@@ -1368,7 +1368,7 @@ Not noticeable unless using higher zoom.",
 302535920000654,Select (or mouse over) an object to follow.,
 302535920000655,Toggle Cursor,
 302535920000656,Toggle between moving camera and selecting objects.,
-302535920001375,"<color 255 100 100>WARNING: Backup your first five workshop images (unless you use screenshot 1-5 in mod def, or in AppData/Mod Images/ModId_screenshot*.png/jpg).</color>",
+302535920001375,"<color 255 100 100>WARNING: Backup your first five workshop images, unless you use screenshot 1-5 in mod def, or in AppData/Mod Images/ModId_*.png/jpg.</color>",
 302535920001364,Don't be an asshole to %s... Always ask permission before using other people's hard work.,
 302535920001365,HPK files will be unpacked into AppData/Mods/ModSteamId,
 302535920001362,Extract HPKs,
