Expanded Cheat Menu:
### Fixed:
- Building Info>Production didn't work.

Fix: Grid Not Working v0.1:
When you load a save this will go through the grids and check for objects that shouldn't be in there.

Original Amounts v0.1:
Buildings use their original build/maintence costs.
Also resets supply rocket fuel cost to original.

RC Mechanic v0.1:
Autonomous repair of Drones/RCs that have broken down due to driving into a dust devil or something equally smart.
Ignores any that are within distance of drone hubs/rockets.

ExpandedCheatMenu@choggi.org

--- a/Mods ChoGGi/RC Miner/changes.txt
+++ b/Mods ChoGGi/RC Miner/changes.txt
@@ -1,6 +1,14 @@
+v1.1
+Precious idle time wasn't changeable.
+Added some paint around mining area (toggle in ModConfig).
+
+v1.0
+Changed mining speeds of Metal/Precious to 50%/10%.
+Added support for ModConfig.
+Fixed issue with auto-mode not changing stack size.
+
 v0.9
 Concrete is fixed now.
-
 v0.8
 Fixed all the niggly little issues...
 The code is (hopefully) quite a bit more fault-tolerant.
