--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1,6 +1,4 @@
 ID,Text,Translation,Old Translation,Gender
-302535920000664,,
-302535920000665,,
 302535920001074,,
 302535920001075,,
 302535920001376,,
@@ -1372,6 +1370,8 @@ Not noticeable unless using higher zoom.",
 302535920000654,Select (or mouse over) an object to follow.,
 302535920000655,Toggle Cursor,
 302535920000656,Toggle between moving camera and selecting objects.,
+302535920000664,Clipboard,
+302535920000665,If uploading a new mod this copies steam_id to clipboard.,
 302535920001375,"<color 255 100 100>WARNING: Backup your first five workshop images, unless you use screenshot 1-5 in mod def, or in AppData/Mod Images/ModId_*.png/jpg.</color>",
 302535920001364,Don't be an asshole to %s... Always ask permission before using other people's hard work.,
 302535920001365,HPK files will be unpacked into AppData/Mods/ModSteamId,
