ECM: ### Changed: - Manually spawned entity objects have a usable menu.
Library:
- Cleaned up locales.
- Added more functionality to spawned entity objects.
- Fixed possible issue with RotatyThing (change object colour, and some others).

Mods:
- Random Building Colour: Changes the colours of objects to random colours when placed.
- Loading Screen Example: Adds a single loading screen as an example to make your own pack.
This will block the old ones, see Script.lua to add them back as well.

ExpandedCheatMenu@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1,5 +1,4 @@
 ID,Text,Translation,Old Translation,Gender
-302535920001074,[Mark All],
 302535920001075,,
 302535920001376,,
 302535920001377,,
@@ -28,6 +27,7 @@ ID,Text,Translation,Old Translation,Gender
 302535920000887,ECM,
 302535920000000,Expanded Cheat Menu,
 302535920000104,Expanded CM,
+302535920001110,Spawned entity object,
 302535920001366,Delete Small Rocks,
 302535920000864,Delete Large Rocks,
 302535920001356,New,
@@ -228,6 +228,7 @@ If this isn't a dumping site then waste rock will not be emptied.",
 302535920000692,Log is blank (well not anymore).,
 302535920000477,Clear out the windowed console log.,
 302535920000865,Toggle Trans,
+302535920001074,[Mark All],
 302535920001369,Ged Editor,
 302535920001359,debug.getinfo() level,
 302535920001358,debug.upvalue() level,
@@ -857,7 +858,6 @@ Not permanent.",
 302535920000447,Change the age at which colonists die (applies to newly arrived and born colonists as well).,
 302535920000448,"I'm afraid it could be 9/11 times 1,000.",
 302535920001368,Sound FX,
-302535920001110,Press F4,
 302535920000724,Show Grid Square,
 302535920000725,Square (use Disable to hide.,
 302535920001192,Show Grid 45 Square,
