--- a/Mods ChoGGi/RC Miner/changes.txt
+++ b/Mods ChoGGi/RC Miner/changes.txt
@@ -1,9 +1,11 @@
+v1.4
+Refunds 1/2 amount of cost for building (instead of 5 Metals/Poly) on demo.
+
 v1.3
 1.2 Borked new rovers (it's cause you didn't buy enough card packs to elevate your gameplay).
 In auto-mode the not working sign didn't get removed when moving to a new site.
 
 Again buy card packs you leeches, this ain't no BF backing out on their commitment to suck you dry. We're FIFA all the way.
-
 v1.2
 Re-branded to RC Miner.
 
@@ -15,7 +17,6 @@ Buy card packs to speed up mining.
 501 cards for 499.999 USD (Best Value!).
 
 No more waiting around for your loot, now you can build your premium custom base sooner!
-
 v1.1
 Precious idle time wasn't changeable.
 Added some paint around mining area (toggle in ModConfig).
