Expanded Cheat Menu:
## v9.8 (12 Oct 2018)
- Examine: Delete All added for objlists.

## v2.1 (12 Oct 2018)
- Code cleanup.

ExpandedCheatMenu@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1,5 +1,11 @@
 ID,Text,Translation,Old Translation,Gender
-302535920001075,,
+302535920000056,,
+302535920000057,,
+302535920000061,,
+302535920000062,,
+302535920000065,,
+302535920000066,,
+302535920000067,,
 302535920001376,,
 302535920001377,,
 302535920001378,,
@@ -228,6 +234,7 @@ If this isn't a dumping site then waste rock will not be emptied.",
 302535920000692,Log is blank (well not anymore).,
 302535920000477,Clear out the windowed console log.,
 302535920000865,Toggle Trans,
+302535920001075,[Delete All],
 302535920001074,[Mark All],
 302535920001369,Ged Editor,
 302535920001359,debug.getinfo() level,
@@ -270,17 +277,10 @@ This can take time on something like the ""Building"" metatable (don't use this 
 Which you can then mess around with some more in the console.",
 302535920000053,Attaches,
 302535920000054,Any objects attached to this object.,
-302535920000056,Trace Log,
-302535920000057,relative times,
-302535920000058,[Show It],
+302535920000058,[Show],
 302535920000059,[Clear Markers],
-302535920000060,[Destroy It!],
-302535920000061,[Log],
-302535920000062,[Times],
+302535920000060,[Destroy],
 302535920000064,[Transp],
-302535920000065,Short,
-302535920000066,Long,
-302535920000067,TraceCall,
 302535920000070,"Shows list of attachments. This %s has %s.
 
 Press %s to hide green markers.",
