--- a/Mods ChoGGi/Solaria Telepresence/changes.txt
+++ b/Mods ChoGGi/Solaria Telepresence/changes.txt
@@ -1,3 +1,6 @@
+v0.8
+Library.
+
 v0.7
 I accidently removed the code removing the limit on placing outside workplaces.
 Cleaning up code (ChoGGi's Library).
