Expanded Cheat Menu:
### Changed:
- Examine link buttons are icons now.

ExpandedCheatMenu@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1,11 +1,13 @@
 ID,Text,Translation,Old Translation,Gender
-302535920000056,,
-302535920000057,,
+302535920000060,,
 302535920000061,,
 302535920000062,,
+302535920000064,,
 302535920000065,,
 302535920000066,,
 302535920000067,,
+302535920001075,,
+302535920001074,,
 302535920001376,,
 302535920001377,,
 302535920001378,,
@@ -33,6 +35,7 @@ ID,Text,Translation,Old Translation,Gender
 302535920000887,ECM,
 302535920000000,Expanded Cheat Menu,
 302535920000104,Expanded CM,
+302535920000865,Toggle Trans,
 302535920001110,Spawned entity object,
 302535920001366,Delete Small Rocks,
 302535920000864,Delete Large Rocks,
@@ -233,9 +236,10 @@ If this isn't a dumping site then waste rock will not be emptied.",
 302535920000870,Shows any errors from loading mods in console log.,
 302535920000692,Log is blank (well not anymore).,
 302535920000477,Clear out the windowed console log.,
-302535920000865,Toggle Trans,
-302535920001075,[Delete All],
-302535920001074,[Mark All],
+302535920000059,Destroy all objects in objlist!,
+302535920000057,Mark Object,
+302535920000058,Mark All Objects,
+302535920000056,Mark all items in objlist with green spheres.,
 302535920001369,Ged Editor,
 302535920001359,debug.getinfo() level,
 302535920001358,debug.upvalue() level,
@@ -277,10 +281,6 @@ This can take time on something like the ""Building"" metatable (don't use this 
 Which you can then mess around with some more in the console.",
 302535920000053,Attaches,
 302535920000054,Any objects attached to this object.,
-302535920000058,[Show],
-302535920000059,[Clear Markers],
-302535920000060,[Destroy],
-302535920000064,[Transp],
 302535920000070,"Shows list of attachments. This %s has %s.
 
 Press %s to hide green markers.",
