--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1,6 +1,4 @@
 ID,Text,Translation,Old Translation,Gender
-302535920000061,,
-302535920000062,,
 302535920000064,,
 302535920000065,,
 302535920000066,,
@@ -1233,6 +1231,8 @@ Takes less then a second on a map with 3616 buildings and 54 drone hubs.",
 302535920000620,If any colonists are black cubes click this.,
 302535920000621,Align All Buildings To Hex Grid,
 302535920000622,If you have any buildings that aren't aligned to the hex grids use this.,
+302535920000061,Place Objects,
+302535920000062,Opens editor mode with the place objects dialog.,
 302535920001370,If something makes the camera view wonky you can use this to fix it.,
 302535920001111,Whiter Rocks,
 302535920001113,Helps the rocks blend in better when using the polar ground texture.,
