--- a/Mods ChoGGi/Auto Empty Waste Storage/changes.txt
+++ b/Mods ChoGGi/Auto Empty Waste Storage/changes.txt
@@ -1,6 +1,8 @@
+v0.4
+Cleaning up code (ChoGGi's Library).
+
 v0.3
 Cleaned up code.
 Stopped use of ModConfig, you can change options when you select a dump site.
-
 v0.2
 Da Vinci
