--- a/Mods ChoGGi/RC Bulldozer/todo.txt
+++ b/Mods ChoGGi/RC Bulldozer/todo.txt
@@ -1,1 +1,4 @@
 figure out what cleans up the grid when you place a con site.
+menupopup with list of textures with preview in tooltip.
+
+only rebuild buildable when you turn it off.
