--- a/Mods ChoGGi/Pin Expander/changes.txt
+++ b/Mods ChoGGi/Pin Expander/changes.txt
@@ -1,10 +1,11 @@
+v0.5
+Library update.
+
 v0.4
 Cleaning up code (ChoGGi's Library).
-
 v0.3
 Clicking a rocket will work properly now.
 Non-spawned rockets are now hidden from view.
-
 v0.2
 Faster (3K+ colonists takes 1-2 seconds).
 
