--- a/Mods ChoGGi/RC Bulldozer/changes.txt
+++ b/Mods ChoGGi/RC Bulldozer/changes.txt
@@ -1,3 +1,7 @@
+v0.5
+Sped up the method I used to make ground drivable, but now it'll block objects from being placed nearby when Dozer Toggle is enabled.
+Dozer body colour is changed while Dozer Toggle is enabled, so you know to turn if off when idle.
+
 v0.4
 Rover isn't shy of bumpy ground anymore.
 Added popup list to Texture button.
