--- a/Mods ChoGGi/View Colony Map/changes.txt
+++ b/Mods ChoGGi/View Colony Map/changes.txt
@@ -1,3 +1,6 @@
+v0.7
+The not detected my library msg didn't show up.
+
 v0.6
 Library update.
 
@@ -5,12 +8,15 @@ v0.5
 Sagan.
 Added the nine new maps (re-did all of them just in case of differences).
 There's no point in having the position in the title bar, so removed.
+
 v0.4
 Made the map size based on uiscale.
 The map defaults to the right-side.
 Added position to title bar.
 Cleaning up code (ChoGGi's Library).
+
 v0.3
 As best I can tell some other mod is also using the same function, so I added a check for when a game is started to just skip showing the image.
+
 v0.2
 Made it stop the image from showing up once you start a new game.
