Expanded Cheat Menu:
Sped up debug grid a bit more, and limited it to 125 (got a crash on 150).

### Added:
- Console>Examine>Auto Update List: Updates the examine list when ECM updates it.

### Changed:
- Add Prefabs will base it's list on the cargo prefabs list.
- Debug>Presets renamed to Ged Presets Editor.

### Fixed:
- Issues using the cheat menu in the main menu.
- Issue when setting Charge/Discharge for buildings (thanks OyeBhotka).

Library:
- More icons may show up in the list choices.

Construction: Show Max Radius Range v0.3:
Shows heat circles for Mohole Mine and Artificial Sun.

Dome: Stop Filter Traits Reset Quarantine v0.1:
Opening Filter Traits when quarantine is active will reset the quarantine.
This stops it from resetting.

Orbital Prefab Drops v0.1:
Prefabs are now stored on a space station that will launch them down to the build site.

RC Miner v1.5:
Removed some console log spam.

ExpandedCheatMenu@choggi.org

--- a/Mods ChoGGi/Construction Show Max Radius Range/changes.txt
+++ b/Mods ChoGGi/Construction Show Max Radius Range/changes.txt
@@ -1,3 +1,6 @@
+v0.3
+Shows heat circles for Mohole Mine and Artificial Sun.
+
 v0.2
 Shows maxed grid marker for both (circle now only shows for heater).
 Got rid of log spam when ECM isn't installed.
