--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1,9 +1,4 @@
 ID,Text,Translation,Old Translation,Gender
-302535920001074,,
-302535920001376,,
-302535920001377,,
-302535920001378,,
-302535920001379,,
 302535920001380,,
 302535920001381,,
 302535920001382,,
@@ -138,6 +133,7 @@ You can copy and paste numbers if you want.",
 302535920000028,Find Resource,
 302535920000029,Error: Cannot find any %s.,
 302535920000032,Select a resource to find,
+302535920001074,Ged Presets Editor,
 302535920000503,Right-click an item/submenu to add/remove it from the quickbar.,
 302535920001309,"Press Tilde or Enter and click the ""Settings"" button then uncheck ""Console Log"" to stop showing console log (instead of pressing F9 each time).",
 302535920000247,Startup ticks,
@@ -207,6 +203,10 @@ If this isn't a dumping site then waste rock will not be emptied.",
 302535920001301,Edit Text,
 302535920000721,Overwrite,
 302535920000827,Check this to overwrite file instead of appending to it.,
+302535920001376,Auto Update List,
+302535920001377,Update this list when ECM updates it.,
+302535920001378,XWindow Inspector,
+302535920001379,Opens up the window inspector with terminal.desktop.,
 302535920001287,Instead of a single line, you can enter/execute code in a textbox.,
 302535920000473,Reload ECM Menu,
 302535920000474,Fiddling around in the editor mode can break the menu / shortcuts added by ECM (use this to fix).,
