--- a/Mods ChoGGi/Orbital Prefab Drops/todo.txt
+++ b/Mods ChoGGi/Orbital Prefab Drops/todo.txt
@@ -1,6 +1,1 @@
-function object:SetGravity(accel)
-function object:GetGravityFallTime(height, accel)
-function object:GetGravityHeightTime(target, height, accel)
-function object:GetGravityAngleTime(target, angle, accel)
-
-detach rockets, drop them to ground or knocked away by explode?
+add a mc option for dusty landings.
