Expanded Cheat Menu:
### Added:
- Help>Report Bug: It's a bug report dialog.

ExpandedCheatMenu@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1,6 +1,4 @@
 ID,Text,Translation,Old Translation,Gender
-302535920001380,,
-302535920001381,,
 302535920001382,,
 302535920001383,,
 302535920001384,,
@@ -1585,6 +1583,8 @@ Needs to change Sol to update.",
 restart to set disabled.",
 302535920000717,Switch to a different commander.,
 302535920000718,Set Bonuses Commander,
+302535920001380,Report Bug,
+302535920001381,Opens the bug report dialog.,
 302535920001346,Random Colour,
 302535920001347,Show Console,
 302535920001348,Restart,
