Expanded Cheat Menu: Version bump.
### Fixed:
- I broke the load order for my library mod.

ExpandedCheatMenu@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1584,7 +1584,7 @@ restart to set disabled.",
 302535920000717,Switch to a different commander.,
 302535920000718,Set Bonuses Commander,
 302535920001380,Report Bug,
-302535920001381,Opens the bug report dialog.,
+302535920001381,Opens the bug report dialog (this will fill AppData\BugReport folder with screenshots).,
 302535920001346,Random Colour,
 302535920001347,Show Console,
 302535920001348,Restart,
