Mods: Updated some tutorials.
Expanded Cheat Menu:
Changed some comments and prints filename when taking a screenshot.

Library:
Slight speed up for my random colour func.

Construction: Show Dome Passage Line v0.5:
Hex marks are coloured green to make them distinct from dome marks.
Raised the height of my marks just above dome marks.
Marks are updated when you rotate a dome.
Marks show up on construction sites.
Since you can rebuild ruins, it'll also mark them as well (if it's a horrid notion to you then I can add a ModConfig option)...

OnMsg Print v0.1:
Sagan update
I've got an ahk script to get all msgs from the lua files. If anyone wants a whole bunch of msgs printed in their log use this mod...

ExpandedCheatMenu@choggi.org

--- a/Mods ChoGGi/Construction Show Dome Passage Line/changes.txt
+++ b/Mods ChoGGi/Construction Show Dome Passage Line/changes.txt
@@ -1,8 +1,17 @@
+v0.5
+Hex marks are coloured green to make them distinct from dome marks.
+Raised the height of my marks just above dome marks.
+Marks are updated when you rotate a dome.
+Marks show up on construction sites.
+Since you can rebuild ruins, it'll also mark them as well (if it's a horrid notion to you then I can add a ModConfig option)...
+
 v0.4
 Da Vinci
+
 v0.3
 Added hex markers instead of just an arrow.
 Uses shape data instead of spot names to place markers.
+
 v0.2
 Slightly faster for large amounts of domes.
 Ignores dome ruins.
