--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -24,7 +24,7 @@ ID,Text,Translation,Old Translation,Gender
 302535920000864,Delete Large Rocks,
 302535920001356,New,
 302535920001355,Map,
-302535920001354,"This dome (%s) has buildings, which = crash if removed...",
+302535920001354,"This dome (%s) has buildings, which equals crash if removed...",
 302535920000723,Lua,
 302535920001257,Auto-refresh list every second.,
 302535920001288,Wrap Lines,
@@ -321,7 +321,7 @@ Double click selected item to open in new manipulator.",
 302535920000102,Use to change values of selected list item.,
 302535920000103,Edit Value,
 302535920000064,Build On Geysers,
-302535920000065,Allows you to build on geysers (Warning: Permanent for this save).,
+302535920000065,Allows you to build on geysers. Use Shift-F4 around the area to delete the geyser objects (about 10-20 depending on size).,
 302535920001367,Toggles,
 302535920001344,Points To Train,
 302535920001345,How many points are needed to finish training.,
