Expanded Cheat Menu:
### Changed:
- Added a modified prop button to examine dialogs

### Removed:
- Two menu items from examine (they were added as buttons in .3).

ExpandedCheatMenu@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1,7 +1,4 @@
 ID,Text,Translation,Old Translation,Gender
-302535920001384,,
-302535920001385,,
-302535920001386,,
 302535920001387,,
 302535920001388,,
 302535920001389,,
@@ -226,6 +223,7 @@ If this isn't a dumping site then waste rock will not be emptied.",
 302535920000870,Shows any errors from loading mods in console log.,
 302535920000692,Log is blank (well not anymore).,
 302535920000477,Clear out the windowed console log.,
+302535920001384,Properties different from base object?,
 302535920000067,Ged Inspect,
 302535920001075,Open this object in the Ged inspector.,
 302535920000066,<color 203 120 30>Off-Map Pos</color>,
@@ -1232,6 +1230,8 @@ Takes less then a second on a map with 3616 buildings and 54 drone hubs.",
 302535920000620,If any colonists are black cubes click this.,
 302535920000621,Align All Buildings To Hex Grid,
 302535920000622,If you have any buildings that aren't aligned to the hex grids use this.,
+302535920001385,Use these lists to find the correct ids.,
+302535920001386,Can be changed after in %s>%s>%s.,
 302535920000061,Place Objects,
 302535920000062,Opens editor mode with the place objects dialog.,
 302535920001370,If something makes the camera view wonky you can use this to fix it.,
