Expanded Cheat Menu: ### Added: - Re-added Help>Interface>Toggle Signs: If CheatsEnabled() returned false then it didn't work (not sure why devs think it's a cheat).
### Changed:
- Unlock All Buildings now updates categories as well as items (assuming build menu is visible).

Lib:
- Cleaned up my DeleteObject func to remove the (hopefully) last of the log spam.

ExpandedCheatMenu@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1,7 +1,4 @@
 ID,Text,Translation,Old Translation,Gender
-302535920000222,Oh look ECM hit the itty bitty limit of const.MaxModDataSize. Who'd a thunk it? Eh' Mortimer.,
-302535920001387,,
-302535920001388,,
 302535920001389,,
 302535920001390,,
 302535920001391,,
@@ -22,7 +19,7 @@ ID,Text,Translation,Old Translation,Gender
 302535920000864,Delete Large Rocks,
 302535920001356,New,
 302535920001355,Map,
-302535920001354,"This dome (%s) has buildings, which equals crash if removed...",
+302535920001354,%s is a Dome with buildings (likely crash if deleted).,
 302535920000723,Lua,
 302535920001257,Auto-refresh list every second.,
 302535920001288,Wrap Lines,
@@ -91,6 +88,7 @@ If this isn't a new install, then see Menu>Help>ECM>Changelog and search for ""T
 302535920000793,History,
 302535920000881,"Place .lua files in %s to have them show up in the ""Scripts"" list, you can then use the list to execute them (you can also create folders for sorting).",
 302535920000888,Any .lua files in here will be part of a list that you can execute in-game from the console menu.,
+302535920000222,Oh look ECM hit the itty bitty limit of const.MaxModDataSize. Who'd a thunk it? Eh' Mortimer.,
 302535920000739,Black,
 302535920000740,Asian,
 302535920001283,Indian,
@@ -1371,6 +1369,8 @@ Not noticeable unless using higher zoom.",
 302535920000654,Select (or mouse over) an object to follow.,
 302535920000655,Toggle Cursor,
 302535920000656,Toggle between moving camera and selecting objects.,
+302535920001387,Toggle Signs,
+302535920001388,"Concrete, metal deposits, not working, etc...",
 302535920000664,Clipboard,
 302535920000665,If uploading a new mod this copies steam_id to clipboard.,
 302535920001375,"<color 255 100 100>WARNING: Backup your first five workshop images, unless you use screenshot 1-5 in mod def, or in AppData/Mod Images/ModId_*.png/jpg.</color>",
