Expanded Cheat Menu:
- Examine:
- > Toolbar button: Get all properties: Queries obj:GetProperties() and lists the values.
- > Checkbox: Show all values: Gets all the metatable names and shows the values of those for the object (global toggle).

ExpandedCheatMenu@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1,7 +1,4 @@
 ID,Text,Translation,Old Translation,Gender
-302535920001389,,
-302535920001390,,
-302535920001391,,
 302535920001392,,
 302535920001393,,
 302535920001394,,
@@ -221,7 +218,10 @@ If this isn't a dumping site then waste rock will not be emptied.",
 302535920000870,Shows any errors from loading mods in console log.,
 302535920000692,Log is blank (well not anymore).,
 302535920000477,Clear out the windowed console log.,
-302535920001384,Properties different from base object?,
+302535920001389,All Properties,
+302535920001390,Get all properties.,
+302535920001391,Show all values (metatable).,
+302535920001384,Get properties different from base/parent object?,
 302535920000067,Ged Inspect,
 302535920001075,Open this object in the Ged inspector.,
 302535920000066,<color 203 120 30>Off-Map Pos</color>,
