--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -132,6 +132,7 @@ You can copy and paste numbers if you want.",
 302535920000732,"Childkiller: You evil, evil person.",
 302535920000733,Open a preset in the editor.,
 302535920000735,Timer delay skipped,
+302535920000083,<left_click> Activate,
 302535920000060,Instantly complete building without needing resources.,
 302535920001277,Open %s in the Object Examiner.,
 302535920001053,Fill up %s with fuel.,
