ECM: Examine left side of tables aren't plain text anymore...
Mods:
Show Saved Colonies v0.7/View Colony Map v0.8
Gagarin.

ExpandedCheatMenu@choggi.org

--- a/Mods ChoGGi/Show Saved Colonies/changes.txt
+++ b/Mods ChoGGi/Show Saved Colonies/changes.txt
@@ -1,12 +1,18 @@
+v0.7
+Gagarin.
+
 v0.6
 Sagan.
 
 v0.5
 New icon thanks to SkiRich.
 New name.
+
 v0.4
 Moved saved names to the pointer thingy.
+
 v0.3
 Changed marker to just be the green dome instead of the outer bars as well.
+
 v0.2
 Problem with the planet rotating.
